Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4105

RecDumpRecords passes the wrong record type to its callback

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.0
    • Management API
    • None

    Description

      RecDumpRecords accepts a bit mask of record types. When it invokes the record type with the callback, it passes the bit mask, not the actual type of the record. This is pretty bad because otherwise there's no way to know the record type.

      Attachments

        Activity

          People

            jamespeach James Peach
            jamespeach James Peach
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: