TS-4105: RecDumpRecords passes the wrong record type to its callback